# btfollow

./: README.rst  pyproject.toml  setup.cfg
btfollow/: cli.py  config.py  core.py  device.py
btfollow/platform/: __init__.py  darwin.py
tests/: test_btfollow.py
