[tool.poetry]
name = "btfollow"
version = "0.1.1"
description = "A simple tool to sync multi-device keyboard with a standard mouse"
authors = "Nahuel Defosse <nahuel.defosse+pypi@protonmail.com>"
homepage = "https://github.com/D3f0/btfollow"
readme = "README.rst"
licence = "BSD-4-Clause"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
sh = "^1.12"
appdirs = "^1.4"
toml = "^0.10.0"
voluptuous = "^0.11.5"
loguru = "^0.2.5"

# rumps = { version = "^3.0", optional = true }

# [tool.poetry.extras]
# osx = ["rumps"]


[tool.poetry.dev-dependencies]
pytest = "^3.0"
hunter = "^2.2"
ipython = "^7.2"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pdbpp = "^0.9.6"
flake8 = "^3.7"
mypy = "^0.670.0"
bandit = "^1.5"
# bullet = "^2.0"
# python-daemon = "^2.2"
bumpversion = "^0.5.3"

[tool.poetry.scripts]
btfollow = 'btfollow.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

